removed nature and demeanor, and expanded tradition and personality column to take up extra space. also: fixed line-wrap with dots on skills with very long names (ex: "Cosmology (deep umbra)")

--- a/MageCharacterSheetGenerator/mcsg.css
+++ b/MageCharacterSheetGenerator/mcsg.css
@@ -81,7 +81,7 @@ body > footer {
 
 dl > dt {
 	float: left;
-	clear: left;
+	clear: both;
 }
 
 dl > dd {
